<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_Base">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_titulo_nombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titulo_nombres" />

        <EditText
            android:id="@+id/nombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/vacio"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_titulo_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titulo_base" />

        <EditText
            android:id="@+id/base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/vacio"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>
    <Button
        android:id="@+id/button_siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_siguiente"
        android:layout_margin="50px"
        android:onClick="abrirActividad3"/>

    <Button
        android:id="@+id/button_cerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cerrar"
        android:layout_margin="50px"/>

</LinearLayout>
